# ClimateQueryProvider

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: pytest.yml
src/: __init__.py
src/cqpro/: __init__.py  bbox_countries.csv  download_data.py  parameters.py  query_data.py  utils.py
test/: test_download.py  test_download_query.py  test_query.py
