[build-system]
requires = [
    "setuptools>=40.8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "cqpro"
version = "2023.2.1.2"
authors = [{ name = "Eurobios", email = "contact_ost@eurobios.com" }]
description = "Python API for Meteorogical data from ECMWF"
urls = {repository = "https://github.com/eurobios-scb/ClimateQueryProvider"}
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
]
keywords = ["meteo", "wind", "temperature"]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
